Project build with makefile and docker compose
